# Synchronized-Data-Acquisition-System

./: .gitattributes  .gitignore  Doxyfile  README.md  autostart.sh  build_python_binds.sh  install_minimal_env.sh  requirements.txt  update_git_attributes.sh
docs/: Collector-plugins protocol v1 [PL].md  Pybind11 binding instructions [PL].md
examples/cpp_acquisition_engine/: periodic_acquisition_engine.hpp
examples/python_acquisition_engine/: cv2_camera.py  dummy_sensor.py  pa_sensors_abc.py  pcap_lidar.py  periodic_acquisition_engine.py  requirements.txt
include/: dead_tmp.hpp  frametypes.hpp
kespp/: build_python_binds.sh  create_venvs.sh  install_full_env.sh  pyproject.toml  requirements.txt  setup.py
kespp/include/: kespp_client.hpp
kespp/kespp_python/: __init__ .py  kespp.pyi
kespp/src/: kespp_py.cpp
src/: lidar_py.cpp
src/examples/acquisition_client_example/: cv2_camera.py  dummy_sensor.py  kespp_sensors_abc.py  pcap_lidar.py  periodic_acquisition_engine.py  timestamps_viewer.py  tmp_install_kespp.sh
src/examples/kespp_use_example/: build_kespp_use_example.sh  copy_kespp_tmp.sh  kespp_use_example.cpp  kespp_use_example.py
src/kespp_python/: copy_binaries_tmp.sh
