# To build use venv3xx/bin/python -m build --wheel

[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "kespp"
version = "2.0.0"
dependencies = [
]
requires-python = ">=3.6"


# [tool.setuptools.packages]
# find = {}  # Scan the project directory with the default parameters

# All the following settings are optional:
# [tool.setuptools.packages.find]
# where = [
#     "kespp_python",
#     "src",
#     "include",
# ]  # ["."] by default
# # include = ["mypackage*"]  # ["*"] by default
# # exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default

[tool.setuptools]
packages = ["kespp_python", "include"]
# py-modules = ["kespp_python.kespp.pyi"]